crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S103_S103.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S103 `os.chmod` setting a permissive mask `0o227` on file or directory
 --> S103.py:6:25
  |
6 | os.chmod("/etc/passwd", 0o227)  # Error
  |                         ^^^^^
  |

S103 `os.chmod` setting a permissive mask `0o7` on file or directory
 --> S103.py:7:25
  |
7 | os.chmod("/etc/passwd", 0o7)  # Error
  |                         ^^^
  |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
 --> S103.py:9:25
  |
9 | os.chmod("/etc/passwd", 0o777)  # Error
  |                         ^^^^^
  |

S103 `os.chmod` setting a permissive mask `0o770` on file or directory
  --> S103.py:10:25
   |
10 | os.chmod("/etc/passwd", 0o770)  # Error
   |                         ^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o776` on file or directory
  --> S103.py:11:25
   |
11 | os.chmod("/etc/passwd", 0o776)  # Error
   |                         ^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:13:23
   |
13 | os.chmod("~/.bashrc", 511)  # Error
   |                       ^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:14:24
   |
14 | os.chmod("/etc/hosts", 0o777)  # Error
   |                        ^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:15:25
   |
15 | os.chmod("/tmp/oh_hai", 0x1FF)  # Error
   |                         ^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:17:19
   |
17 | os.chmod(keyfile, 0o777)  # Error
   |                   ^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:18:19
   |
18 | os.chmod(keyfile, 0o7 | 0o70 | 0o700)  # Error
   |                   ^^^^^^^^^^^^^^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o777` on file or directory
  --> S103.py:19:19
   |
19 | os.chmod(keyfile, stat.S_IRWXO | stat.S_IRWXG | stat.S_IRWXU)  # Error
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o10` on file or directory
  --> S103.py:20:27
   |
20 | os.chmod("~/hidden_exec", stat.S_IXGRP)  # Error
   |                           ^^^^^^^^^^^^
   |

S103 `os.chmod` setting a permissive mask `0o2` on file or directory
  --> S103.py:22:25
   |
22 | os.chmod("/etc/passwd", stat.S_IWOTH)  # Error
   |                         ^^^^^^^^^^^^
   |

S103 `os.chmod` setting an invalid mask on file or directory
  --> S103.py:23:25
   |
23 | os.chmod("/etc/passwd", 0o100000000)  # Error
   |                         ^^^^^^^^^^^
   |
