crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S104_S104.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S104 Possible binding to all interfaces
 --> S104.py:9:1
  |
9 | "0.0.0.0"
  | ^^^^^^^^^
  |

S104 Possible binding to all interfaces
  --> S104.py:10:1
   |
10 | '0.0.0.0'
   | ^^^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:11:3
   |
11 | f"0.0.0.0"
   |   ^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:15:6
   |
15 | func("0.0.0.0")
   |      ^^^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:19:9
   |
19 |     x = "0.0.0.0"
   |         ^^^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:24:1
   |
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   | ^^^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:24:13
   |
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   |             ^^^^^^^
   |

S104 Possible binding to all interfaces
  --> S104.py:24:26
   |
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   |                          ^^^^^^^
   |
