crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S105_S105.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S105 Possible hardcoded password assigned to: "password"
  --> S105.py:13:12
   |
13 | password = "s3cr3t"
   |            ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:14:9
   |
14 | _pass = "s3cr3t"
   |         ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:15:10
   |
15 | passwd = "s3cr3t"
   |          ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:16:7
   |
16 | pwd = "s3cr3t"
   |       ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:17:10
   |
17 | secret = "s3cr3t"
   |          ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:18:9
   |
18 | token = "s3cr3t"
   |         ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:19:11
   |
19 | secrete = "s3cr3t"
   |           ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:20:19
   |
20 | safe = password = "s3cr3t"
   |                   ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:21:19
   |
21 | password = safe = "s3cr3t"
   |                   ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "PASSWORD"
  --> S105.py:22:12
   |
22 | PASSWORD = "s3cr3t"
   |            ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "PassWord"
  --> S105.py:23:12
   |
23 | PassWord = "s3cr3t"
   |            ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:24:17
   |
24 | password: str = "s3cr3t"
   |                 ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:25:19
   |
25 | password: Final = "s3cr3t"
   |                   ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:27:17
   |
27 | d["password"] = "s3cr3t"
   |                 ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "pass"
  --> S105.py:28:13
   |
28 | d["pass"] = "s3cr3t"
   |             ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:29:15
   |
29 | d["passwd"] = "s3cr3t"
   |               ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:30:12
   |
30 | d["pwd"] = "s3cr3t"
   |            ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:31:15
   |
31 | d["secret"] = "s3cr3t"
   |               ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:32:14
   |
32 | d["token"] = "s3cr3t"
   |              ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:33:16
   |
33 | d["secrete"] = "s3cr3t"
   |                ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:34:24
   |
34 | safe = d["password"] = "s3cr3t"
   |                        ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:35:24
   |
35 | d["password"] = safe = "s3cr3t"
   |                        ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:39:16
   |
39 |     password = "s3cr3t"
   |                ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:43:20
   |
43 | MyClass.password = "s3cr3t"
   |                    ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:44:17
   |
44 | MyClass._pass = "s3cr3t"
   |                 ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:45:18
   |
45 | MyClass.passwd = "s3cr3t"
   |                  ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:46:15
   |
46 | MyClass.pwd = "s3cr3t"
   |               ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:47:18
   |
47 | MyClass.secret = "s3cr3t"
   |                  ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:48:17
   |
48 | MyClass.token = "s3cr3t"
   |                 ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:49:19
   |
49 | MyClass.secrete = "s3cr3t"
   |                   ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:51:13
   |
51 | password == "s3cr3t"
   |             ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:52:10
   |
52 | _pass == "s3cr3t"
   |          ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:53:11
   |
53 | passwd == "s3cr3t"
   |           ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:54:8
   |
54 | pwd == "s3cr3t"
   |        ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:55:11
   |
55 | secret == "s3cr3t"
   |           ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:56:10
   |
56 | token == "s3cr3t"
   |          ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:57:12
   |
57 | secrete == "s3cr3t"
   |            ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:58:21
   |
58 | password == safe == "s3cr3t"
   |                     ^^^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:60:13
   |
60 | if token == "1\n2":
   |             ^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:63:13
   |
63 | if token == "3\t4":
   |             ^^^^^^
   |

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:66:13
   |
66 | if token == "5\r6":
   |             ^^^^^^
   |
