crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S106_S106.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S106 Possible hardcoded password assigned to argument: "password"
  --> S106.py:14:9
   |
14 | func(1, password="s3cr3t")
   |         ^^^^^^^^^^^^^^^^^
   |
