crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S108_extend.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
 --> S108.py:5:11
  |
5 | with open("/tmp/abc", "w") as f:
  |           ^^^^^^^^^^
  |

S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
 --> S108.py:8:13
  |
8 | with open(f"/tmp/abc", "w") as f:
  |             ^^^^^^^^
  |

S108 Probable insecure usage of temporary file or directory: "/var/tmp/123"
  --> S108.py:11:11
   |
11 | with open("/var/tmp/123", "w") as f:
   |           ^^^^^^^^^^^^^^
   |

S108 Probable insecure usage of temporary file or directory: "/dev/shm/unit/test"
  --> S108.py:14:11
   |
14 | with open("/dev/shm/unit/test", "w") as f:
   |           ^^^^^^^^^^^^^^^^^^^^
   |

S108 Probable insecure usage of temporary file or directory: "/foo/bar"
  --> S108.py:18:11
   |
18 | with open("/foo/bar", "w") as f:
   |           ^^^^^^^^^^
   |

S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
  --> S108.py:22:11
   |
22 | with open("/tmp/" "abc", "w") as f:
   |           ^^^^^^^^^^^^^
   |

S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
  --> S108.py:25:11
   |
25 | with open("/tmp/abc" f"/tmp/abc", "w") as f:
   |           ^^^^^^^^^^
   |

S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
  --> S108.py:25:24
   |
25 | with open("/tmp/abc" f"/tmp/abc", "w") as f:
   |                        ^^^^^^^^
   |
