crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S110_S110.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S110 `try`-`except`-`pass` detected, consider logging the exception
 --> S110.py:3:1
  |
3 | / except Exception:
4 | |     pass
  | |________^
  |

S110 `try`-`except`-`pass` detected, consider logging the exception
 --> S110.py:8:1
  |
8 | / except:
9 | |     pass
  | |________^
  |
