crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S110_typed.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S110 `try`-`except`-`pass` detected, consider logging the exception
 --> S110.py:3:1
  |
1 |   try:
2 |       pass
3 | / except Exception:
4 | |     pass
  | |________^
5 |
6 |   try:
  |

S110 `try`-`except`-`pass` detected, consider logging the exception
  --> S110.py:8:1
   |
 6 |   try:
 7 |       pass
 8 | / except:
 9 | |     pass
   | |________^
10 |
11 |   try:
   |

S110 `try`-`except`-`pass` detected, consider logging the exception
  --> S110.py:13:1
   |
11 |   try:
12 |       pass
13 | / except ValueError:
14 | |     pass
   | |________^
