crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S113_S113.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S113 Probable use of `requests` call without timeout
  --> S113.py:46:1
   |
46 | requests.get('https://gmail.com')
   | ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:47:35
   |
47 | requests.get('https://gmail.com', timeout=None)
   |                                   ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:48:1
   |
48 | requests.post('https://gmail.com')
   | ^^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:49:36
   |
49 | requests.post('https://gmail.com', timeout=None)
   |                                    ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:50:1
   |
50 | requests.put('https://gmail.com')
   | ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:51:35
   |
51 | requests.put('https://gmail.com', timeout=None)
   |                                   ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:52:1
   |
52 | requests.delete('https://gmail.com')
   | ^^^^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:53:38
   |
53 | requests.delete('https://gmail.com', timeout=None)
   |                                      ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:54:1
   |
54 | requests.patch('https://gmail.com')
   | ^^^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:55:37
   |
55 | requests.patch('https://gmail.com', timeout=None)
   |                                     ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:56:1
   |
56 | requests.options('https://gmail.com')
   | ^^^^^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:57:39
   |
57 | requests.options('https://gmail.com', timeout=None)
   |                                       ^^^^^^^^^^^^
   |

S113 Probable use of `requests` call without timeout
  --> S113.py:58:1
   |
58 | requests.head('https://gmail.com')
   | ^^^^^^^^^^^^^
   |

S113 Probable use of `requests` call with timeout set to `None`
  --> S113.py:59:36
   |
59 | requests.head('https://gmail.com', timeout=None)
   |                                    ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:61:32
   |
61 | httpx.get('https://gmail.com', timeout=None)
   |                                ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:62:33
   |
62 | httpx.post('https://gmail.com', timeout=None)
   |                                 ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:63:32
   |
63 | httpx.put('https://gmail.com', timeout=None)
   |                                ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:64:35
   |
64 | httpx.delete('https://gmail.com', timeout=None)
   |                                   ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:65:34
   |
65 | httpx.patch('https://gmail.com', timeout=None)
   |                                  ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:66:36
   |
66 | httpx.options('https://gmail.com', timeout=None)
   |                                    ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:67:33
   |
67 | httpx.head('https://gmail.com', timeout=None)
   |                                 ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:68:14
   |
68 | httpx.Client(timeout=None)
   |              ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:69:19
   |
69 | httpx.AsyncClient(timeout=None)
   |                   ^^^^^^^^^^^^
   |

S113 Probable use of `httpx` call with timeout set to `None`
  --> S113.py:71:19
   |
71 | with httpx.Client(timeout=None) as client:
   |                   ^^^^^^^^^^^^
   |
